--- a/app/assets/stylesheets/pages/restaurants/main.css.scss
+++ b/app/assets/stylesheets/pages/restaurants/main.css.scss
@@ -5,13 +5,16 @@ $grey-shadow: rgba(#000, 0.15);
 
 .main {
   @include box-sizing(border-box);
-  @include min-height(700px);
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 
   h2 {
     color: #444;
   }
 
   > div {
+    flex: 1;
     display: flex;
     flex-flow: row nowrap;
     justify-content: flex-start;
